# ehrdrec

./: .gitignore  README.md  ddinter_atc_codes.csv  pyproject.toml
examples/: building_ndc_to_atc_mappings.py  mapping_ndc_to_atc.py  mimic_iii_loading.py  mlp_training.py  mlp_training_and_eval.py  multi_hot_processing.py
src/ehrdrec/datasets/: __init__.py  multi_hot.py
src/ehrdrec/evaluation/: __init__.py  base.py  standard.py
src/ehrdrec/loading/: __init__.py  base.py  mimic-iii.py  mimic_iii.py  mimic_iv.py
src/ehrdrec/mappings/: __init__.py
src/ehrdrec/mappings/code_to_id/: vocab.py
src/ehrdrec/mappings/ndc_atc/: builder.py  exceptions.py  mapper.py  models.py  normalise.py  store.py
src/ehrdrec/metrics/: __init__.py  base.py  ddi.py  f1.py  jaccard.py  prauc.py
src/ehrdrec/models/: __init__.py  base.py  data_loading.py  data_processing.py
src/ehrdrec/models/dataclasses/: __init__.py  base.py  evaluating.py  training.py
src/ehrdrec/models/torch/: mlp.py
src/ehrdrec/processing/: __init__.py  base.py
src/ehrdrec/processing/to_multihot/: to_multihot.py
src/ehrdrec/training/: __init__.py  base.py  standard.py
src/ehrdrec/utils/: __init__.py  constants.py
utils/: ddi_inter_scraper.py
